# SynEmbTrack

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  tree.txt
configs/: configs_assoc.toml  configs_data.toml  configs_synth.toml
data_raw_images/demo_2Dsuspension_25C/images/: frame_0011.tif  frame_0012.tif  frame_0013.tif  frame_0014.tif  frame_0015.tif  frame_0016.tif  frame_0017.tif  frame_0018.tif  frame_0019.tif  frame_0020.tif  frame_0021.tif  frame_0022.tif  frame_0023.tif  frame_0024.tif  frame_0025.tif  frame_0026.tif  frame_0027.tif  frame_0028.tif  frame_0029.tif  frame_0030.tif  frame_0031.tif  frame_0032.tif  frame_0033.tif  frame_0034.tif  frame_0035.tif  frame_0036.tif  frame_0037.tif  frame_0038.tif  frame_0039.tif  frame_0040.tif  frame_0041.tif  frame_0042.tif  frame_0043.tif  frame_0044.tif  frame_0045.tif  frame_0046.tif  frame_0047.tif  frame_0048.tif  frame_0049.tif  frame_0050.tif  (+60 more)
projects/demo_2Dsuspension_25C/training/: data_properties.json
scripts/: imgGen_run_01_extraction_background.py  imgGen_run_02_extraction_patch.py  imgGen_run_03_prune_alpha_layers.py  imgGen_run_04_gen_image.py  segTrain_run_01_data.py  segTrain_run_02_train.py  track_run_03_predict.py  track_run_04_run_associ.py
src/synembtrack/: _paths.py
src/synembtrack.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/synembtrack/EmbedSeg/: IntegerMask2ContoursDraw.py  draw_contours.py  integerMask2singleTIF.py  test.py  train.py
src/synembtrack/cell_assoc/: association.py  features.py  io.py  pipeline.py  (+1 more)
tools/: visualize_traj_on_raw.py
(+7676 files in other folders)
